agregamos un parrafo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Segundo hola mundo</h2>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium excepturi asperiores quis animi. Sit, debitis!</p>
 </body>
 </html>
