Agregue unos en el centro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Git</title>
 </head>
 <body>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 111 Laudantium excepturi asperiores quis animi. Sit, debitis!</p>
+     <p>Lorem ipsum dolor sit amet, 111 consectetur adipisicing elit. 111 Laudantium excepturi asperiores quis animi. Sit, debitis!</p>
 </body>
 </html>
