--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
      <p>Lorem ipsum dolor sit amet, consectetur rama 1 adipisicing elit. Laudantium excepturi asperiores quis animi. Sit, debitis! hola</p>
-</body>
+    <h2>Hola mundo</h2>
+    </body>
 </html>
