--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>hola</h1>
      <p>Lorem ipsum dolor sit amet, consectetur rama 1 adipisicing elit. Laudantium excepturi asperiores quis animi. Sit, debitis! hola</p>
     <h2>Hola mundo</h2>
-    <h3>Hola 3</h3>
+    <h3>Hola</h3>
     </body>
 </html>
