--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>Git</title>
 </head>
 <body>
-   <p>Este es el primer parrafo</p>
-<<<<<<< HEAD
-   <p>Segundo parrafo</p>
-=======
-   <p>Este es el Segundo parrafo</p>
->>>>>>> rama-secundaria
+   <p>Este es el primer parrafo en la rama main</p>
+   
     </body>
 </html>
