--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git</title>
 </head>
 <body>
-   <p>Este es el primer parrafo</p>
+   <p>Este es el primer parrafo en la rama main</p>
    
     </body>
 </html>
